--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,9 +1,20 @@
 {
   "name": "lvca-bucklescript",
   "version": "0.1.0",
+  "reason": { "react-jsx": 3 },
   "sources": {
     "dir" : "src",
-    "subdirs" : true
+    "subdirs" : true,
+    "generators" : [
+      {
+        "name" : "ocamlyacc",
+        "edge" : ["jsonParser.ml", "jsonParser.mli", ":", "jsonParser.mly"]
+      },
+      {
+        "name" : "ocamllex",
+        "edge" : ["jsonLexer.ml", ":", "jsonLexer.mll"]
+      }
+    ]
   },
   "package-specs": {
     "module": "commonjs",
@@ -11,9 +22,21 @@
   },
   "suffix": ".bs.js",
   "bs-dependencies": [
+    "bs-zarith",
+    "reason-react"
   ],
   "warnings": {
     "error" : "+101"
   },
-  "refmt": 3
+  "refmt": 3,
+  "generators" : [
+    {
+      "name" : "ocamlyacc",
+      "command": "ocamlyacc $in"
+    },
+    {
+      "name" : "ocamllex",
+      "command": "ocamllex $in"
+    }
+  ],
 }
