--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bs-zarith": "^1.0.1",
     "git": "^0.1.5",
     "react": "^16.8.6",
+    "react-codemirror": "^1.0.0",
     "react-dom": "^16.8.6",
     "reason-react": "^0.7.0"
   }
