Don't check in generated js files.

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -41,8 +41,7 @@
     ]
   },
   "package-specs": {
-    "module": "commonjs",
-    "in-source": true
+    "module": "commonjs"
   },
   "suffix": ".bs.js",
   "bs-dependencies": [
