--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,15 @@ node_modules
 bundledOutputs
 yarn-error.log
 lib
+src/languageParser.ml
+src/languageParser.mli
+src/languageLexer.ml
+src/staticsParser.ml
+src/staticsParser.mli
+src/staticsLexer.ml
+src/dynamicsParser.ml
+src/dynamicsParser.mli
+src/dynamicsLexer.ml
+src/termParser.ml
+src/termParser.mli
+src/termLexer.ml
