Add parsing custom error messages.

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -61,7 +61,7 @@
   "generators" : [
     {
       "name" : "menhir",
-      "command": "menhir $in"
+      "command": "menhir --explain --table $in"
     },
     {
       "name" : "ocamllex",
