Add concrete syntax description language.

--- a/.gitignore
+++ b/.gitignore
@@ -28,15 +28,18 @@ node_modules
 bundledOutputs
 yarn-error.log
 lib
-src/languageParser.ml
-src/languageParser.mli
-src/languageLexer.ml
-src/staticsParser.ml
-src/staticsParser.mli
-src/staticsLexer.ml
-src/dynamicsParser.ml
-src/dynamicsParser.mli
-src/dynamicsLexer.ml
-src/termParser.ml
-src/termParser.mli
-src/termLexer.ml
+src/LanguageParser.ml
+src/LanguageParser.mli
+src/LanguageLexer.ml
+src/StaticsParser.ml
+src/StaticsParser.mli
+src/StaticsLexer.ml
+src/DynamicsParser.ml
+src/DynamicsParser.mli
+src/DynamicsLexer.ml
+src/TermParser.ml
+src/TermParser.mli
+src/TermLexer.ml
+src/ConcreteSyntaxParser.ml
+src/ConcreteSyntaxParser.mli
+src/ConcreteSyntaxLexer.ml
