--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cbor": "^4.1.5",
     "codemirror": "^5.47.0",
     "git": "^0.1.5",
+    "jison": "^0.4.18",
     "react": "^16.8.6",
     "react-codemirror2": "^6.0.0",
     "react-dom": "^16.8.6",
