--- a/bsconfig.json
+++ b/bsconfig.json
@@ -62,7 +62,8 @@
     }
   ],
   "package-specs": {
-    "module": "commonjs"
+    "module": "commonjs",
+    "in-source": true
   },
   "suffix": ".bs.js",
   "bs-dependencies": [
