Prevent .conflicts files from being written.
(this was producing empty .conflicts files, since there aren't currently
any conflicts).

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -70,11 +70,11 @@
   "generators" : [
     {
       "name" : "menhir-parserlib",
-      "command": "menhir --explain --table --base `echo $in | cut -f 1 -d '.'` `dirname $in`/ParserLib.mly $in"
+      "command": "menhir --table --base `echo $in | cut -f 1 -d '.'` `dirname $in`/ParserLib.mly $in"
     },
     {
       "name" : "menhir",
-      "command": "menhir --explain --table $in"
+      "command": "menhir --table $in"
     },
     {
       "name" : "ocamllex",
