Remove generated js files from git.

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -54,8 +54,7 @@
     }
   ],
   "package-specs": {
-    "module": "commonjs",
-    "in-source": true
+    "module": "commonjs"
   },
   "suffix": ".bs.js",
   "bs-dependencies": [
