--- a/bsconfig.json
+++ b/bsconfig.json
@@ -9,11 +9,11 @@
       "generators" : [
         {
           "name" : "menhir",
-          "edge" : ["Language_Parser.ml", "Language_Parser.mli", ":", "Language_Parser.mly"]
+          "edge" : ["AbstractSyntax_Parser.ml", "AbstractSyntax_Parser.mli", ":", "AbstractSyntax_Parser.mly"]
         },
         {
           "name" : "ocamllex",
-          "edge" : ["Language_Lexer.ml", ":", "Language_Lexer.mll"]
+          "edge" : ["AbstractSyntax_Lexer.ml", ":", "AbstractSyntax_Lexer.mll"]
         },
         {
           "name" : "menhir-parserlib",
