--- a/package.json
+++ b/package.json
@@ -14,26 +14,25 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@glennsl/bs-jest": "^0.4.8",
-    "bs-platform": "^5.0.4",
-    "jest": "^24.8.0",
-    "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2"
+    "@glennsl/bs-jest": "^0.4.9",
+    "bs-platform": "^7.0.1",
+    "jest": "^24.9.0",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   },
   "dependencies": {
     "bs-zarith": "^1.0.1",
-    "cbor": "^4.1.5",
+    "cbor": "^5.0.1",
     "codemirror": "^5.47.0",
-    "react": "^16.8.6",
+    "react": ">=16.8.6",
     "react-codemirror2": "^6.0.0",
-    "react-dom": "^16.8.6",
+    "react-dom": ">=16.8.6",
     "reason-react": "^0.7.0",
-    "serialize-javascript": "2.1.1",
     "sjcl": "^1.0.8"
   },
   "resolutions": {
-    "@jest/core": "24.3.1",
-    "@jest/console": "24.3.0",
-    "@jest/environment": "24.3.1"
+    "@jest/core": "24.9.0",
+    "@jest/console": "24.9.0",
+    "@jest/environment": "24.9.0"
   }
 }
