Move reason files to src-frontend.

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -4,6 +4,9 @@
   "reason": { "react-jsx": 3 },
   "sources": [
     {
+      "dir" : "src-frontend"
+    },
+    {
       "dir" : "src",
       "subdirs" : true,
       "generators" : [
