--- a/src-native/dune
+++ b/src-native/dune
@@ -1,5 +1,5 @@
 (library
   (public_name lvca)
   (inline_tests)
-  (libraries base core_kernel tablecloth-native sha cbor)
+  (libraries base core_kernel tablecloth-native sha cbor re2)
   (preprocess (pps ppx_inline_test)))
