--- a/src/dune
+++ b/src/dune
@@ -1,8 +1,8 @@
 (library
   (public_name lvca)
   (inline_tests)
-  (libraries base core_kernel sha cbor bonsai.web bignum)
-  (preprocess (pps ppx_inline_test ppx_jane)))
+  (libraries digestif.ocaml base core_kernel cbor bignum re)
+  (preprocess (pps ppx_jane)))
 
 (ocamllex
   (modules
