--- a/bonsai-test/dune
+++ b/bonsai-test/dune
@@ -1,4 +1,4 @@
 (executables
   (names main)
   (libraries bonsai.web lvca)
-  (preprocess (pps ppx_jane)))
+  (preprocess (pps ppx_jane js_of_ocaml-ppx)))
