--- a/pages/0x-document-render/dune
+++ b/pages/0x-document-render/dune
@@ -1,5 +1,6 @@
 (executables
-  (names main)
-  (modes js)
-  (libraries bonsai.web lvca lvca_web)
-  (preprocess (pps ppx_jane js_of_ocaml-ppx)))
+ (names main)
+ (modes js)
+ (libraries bonsai.web lvca lvca_web)
+ (preprocess
+  (pps ppx_jane js_of_ocaml-ppx)))
