Some work on bidirectional debugger page.

--- a/pages/dune
+++ b/pages/dune
@@ -1,6 +1,8 @@
 (library
  (name lvca_web)
  (libraries bonsai.web lvca)
+ (js_of_ocaml
+  (javascript_files "./codemirror.js"))
  (preprocess
   (pps ppx_jane js_of_ocaml-ppx))
  (public_name lvca.web))
