--- a/src/dune
+++ b/src/dune
@@ -1,7 +1,7 @@
 (library
  (public_name lvca)
  (inline_tests)
- (libraries digestif.ocaml base cbor bignum re fmt)
+ (libraries digestif.ocaml base cbor bignum fmt)
  (preprocess
   (pps ppx_jane)))
 
