--- a/pages/0x-core-eval/dune
+++ b/pages/0x-core-eval/dune
@@ -1,6 +1,6 @@
 (executables
  (names main)
  (modes js)
- (libraries lvca lvca_web)
+ (libraries lvca lvca_web lwt js_of_ocaml-lwt)
  (preprocess
   (pps ppx_jane js_of_ocaml-ppx)))
