--- a/pages/0x-diagram-render/dune
+++ b/pages/0x-diagram-render/dune
@@ -1,6 +1,6 @@
 (executables
  (names main)
  (modes js)
- (libraries lvca lvca_web js_of_ocaml-lwt gg vg vg.htmlc)
+ (libraries lvca lvca_web js_of_ocaml-lwt gg vg vg.htmlc reactiveData angstrom)
  (preprocess
   (pps ppx_jane js_of_ocaml-ppx)))
