--- a/src/dune
+++ b/src/dune
@@ -1,13 +1,13 @@
 (library
  (public_name lvca)
  (inline_tests)
- (libraries digestif.ocaml base cbor bignum fmt)
+ (libraries digestif.ocaml base cbor bignum fmt re angstrom)
  (preprocess
   (pps ppx_jane)))
 
 (ocamllex
- (modules AbstractSyntax_Lexer Core_Lexer Statics_Lexer Term_Lexer))
+ (modules AbstractSyntax_Lexer Core_Lexer Statics_Lexer))
 
 (menhir
- (modules AbstractSyntax_Parser Core_Parser Statics_Parser Term_Parser)
+ (modules AbstractSyntax_Parser Core_Parser Statics_Parser)
  (flags :standard --table))
