Add Hutton's Razor to non-experimental languages.

--- a/languages/dune
+++ b/languages/dune
@@ -1,7 +1,6 @@
 (library
  (name lvca_languages)
- (public_name lvca.languages)
  (inline_tests)
- (libraries lvca)
+ (libraries lvca_syntax)
  (preprocess
   (pps ppx_jane)))
