--- a/pages/01-term-and-concrete/dune
+++ b/pages/01-term-and-concrete/dune
@@ -1,6 +1,6 @@
 (executables
  (names main)
  (modes js)
- (libraries angstrom digestif.ocaml js_of_ocaml-lwt js_of_ocaml-tyxml lvca_languages lvca_syntax react)
+ (libraries angstrom digestif.ocaml js_of_ocaml-lwt js_of_ocaml-tyxml lvca_languages lvca_syntax react reactiveData)
  (preprocess
   (pps ppx_jane js_of_ocaml-ppx)))
