--- a/pages/dune
+++ b/pages/dune
@@ -4,4 +4,4 @@
  (libraries angstrom digestif.ocaml js_of_ocaml-lwt js_of_ocaml-tyxml
    lvca_languages lvca_syntax react reactiveData)
  (preprocess
-  (pps ppx_jane js_of_ocaml-ppx)))
+  (pps ppx_jane js_of_ocaml-ppx tyxml-ppx)))
