--- a/lvca.opam
+++ b/lvca.opam
@@ -1,5 +1,6 @@
 opam-version: "2.0"
 version: "1.0"
+synopsis: "Tools for creating programming languages"
 maintainer: "joelburget@gmail.com"
 authors: ["Joel Burget"]
 homepage: "https://github.com/joelburget/lvca"
