--- a/constructive-real/dune
+++ b/constructive-real/dune
@@ -1,6 +1,6 @@
 (library
  (name constructive_real)
  (inline_tests)
- (libraries base zarith)
+ (libraries base zarith zarith_stubs_js)
  (preprocess
   (pps ppx_jane)))
