--- a/pages/dune
+++ b/pages/dune
@@ -1,5 +1,5 @@
 (executables
- (names devel_main calculator_main)
+ (names devel_main site_main)
  (modes js)
  (libraries angstrom digestif.ocaml js_of_ocaml-lwt js_of_ocaml-tyxml
    lvca_languages lvca_syntax react reactiveData)
