--- a/languages/dune
+++ b/languages/dune
@@ -3,4 +3,4 @@
  (inline_tests)
  (libraries lvca_syntax lvca_core constructive_real)
  (preprocess
-  (pps ppx_jane)))
+  (pps ppx_jane ppx_deriving.show)))
