--- a/pages/dune
+++ b/pages/dune
@@ -2,6 +2,6 @@
  (names devel_main site_main)
  (modes js)
  (libraries angstrom digestif.ocaml js_of_ocaml-lwt js_of_ocaml-tyxml
-   lvca_languages lvca_syntax react reactiveData)
+   lvca_languages lvca_syntax react safe_react reactiveData)
  (preprocess
   (pps ppx_jane js_of_ocaml-ppx tyxml-ppx)))
