--- a/pages/dune
+++ b/pages/dune
@@ -2,9 +2,9 @@
  (names devel_main site_main)
  (modes js)
  (link_flags (:standard -no-check-prims))
- (libraries angstrom base brr brr.note digestif.ocaml lvca_languages lvca_syntax note))
- ; (preprocess
- ;  (pps ppx_jane)))
+ (libraries angstrom base brr brr.note digestif.ocaml lvca_languages lvca_syntax note)
+ (preprocess
+  (pps ppx_jane)))
 
 ; (rule
 ;   (targets devel_main.js)
