--- a/lvca.opam
+++ b/lvca.opam
@@ -2,25 +2,24 @@ opam-version: "2.0"
 version: "1.0"
 synopsis: "Tools for creating programming languages"
 maintainer: "joelburget@gmail.com"
-authors: ["Joel Burget"]
+authors: "Joel Burget"
+license: "MIT"
 homepage: "https://github.com/joelburget/lvca"
 bug-reports: "https://github.com/joelburget/lvca/issues"
-dev-repo: "git+https://github.com/joelburget/lvca.git"
-license: "MIT"
-build: [
-  ["dune" "build" "-p" name "-j" jobs]
-]
 depends: [
   "ocaml" {>= "4.08.0"}
-  "angstrom"
-  "base"
-  "zarith"
-  "cbor"
-  "digestif"
-  "fmt"
+  "angstrom" {with-test}
+  "base" {with-test}
+  "zarith" {with-test}
+  "cbor" {with-test}
+  "digestif" {with-test}
+  "fmt" {with-test}
   "js_of_ocaml"
-  "ppx_jane"
+  "ppx_jane" {with-test}
   "ppx_inline_test"
-  "dune"             {>= "2.0.0"}
-  "zarith_stubs_js"
+  "dune" {>= "2.0.0"}
+  "zarith_stubs_js" {with-test}
+  "uchar" {>= "0.0.2"}
 ]
+build: ["dune" "build" "-p" name "-j" jobs]
+dev-repo: "git+https://github.com/joelburget/lvca.git"
