--- a/pages/dune
+++ b/pages/dune
@@ -1,8 +1,10 @@
 (executables
  (names devel_main site_main)
  (modes js)
- (link_flags (:standard -no-check-prims))
- (libraries angstrom base brr brr.note digestif.ocaml lvca_languages lvca_syntax note)
+ (link_flags
+  (:standard -no-check-prims))
+ (libraries angstrom base brr brr.note digestif.ocaml lvca_languages
+   lvca_syntax note)
  (preprocess
   (pps ppx_jane)))
 
