Add public names for libraries so their documentation will be built.

--- a/languages/dune
+++ b/languages/dune
@@ -1,5 +1,6 @@
 (library
  (name lvca_languages)
+ (public_name lvca.languages)
  (inline_tests)
  (libraries lvca_syntax lvca_core constructive_real)
  (preprocess
