--- a/syntax/dune
+++ b/syntax/dune
@@ -1,5 +1,6 @@
 (library
  (name lvca_syntax)
+ (public_name lvca.syntax)
  (inline_tests)
  (libraries angstrom base fmt zarith zarith_stubs_js lvca_util)
  (preprocess
