--- a/constructive-real/dune
+++ b/constructive-real/dune
@@ -1,5 +1,6 @@
 (library
  (name constructive_real)
+ (public_name lvca.constructive_real)
  (inline_tests)
  (libraries base zarith zarith_stubs_js)
  (preprocess
