Fix Invariant / NoVariance error.

--- a/ppx_lvca/dune
+++ b/ppx_lvca/dune
@@ -3,5 +3,5 @@
  (public_name lvca.ppx)
  (kind ppx_rewriter)
  (preprocess
-  (pps ppxlib.metaquot))
+  (pps ppxlib.metaquot ppx_optcomp))
  (libraries base lvca_syntax ppxlib))
