--- a/lvca.opam
+++ b/lvca.opam
@@ -21,6 +21,7 @@ depends: [
   "zarith_stubs_js"
   "uchar" {>= "0.0.2"}
   "ppxlib" {>= "0.21.0"}
+  "ppx_optcomp" {>= "v0.14.1"}
 ]
 build: ["dune" "build" "-p" name "-j" jobs]
 dev-repo: "git+https://github.com/joelburget/lvca.git"
