Simplified primitive naming.

--- a/languages/dune
+++ b/languages/dune
@@ -2,6 +2,14 @@
  (name lvca_languages)
  (public_name lvca.languages)
  (inline_tests)
- (libraries lvca_syntax lvca_core constructive_real)
+ (libraries
+  brr
+  constructive_real
+  fmt
+  lvca_bidirectional
+  lvca_core
+  lvca_syntax
+  lvca_util
+  omd)
  (preprocess
   (pps ppx_jane ppx_lvca)))
