--- a/lvca.opam
+++ b/lvca.opam
@@ -22,6 +22,7 @@ depends: [
   "uchar" {>= "0.0.2"}
   "ppxlib" {>= "0.22.0"}
   "ppx_optcomp" {>= "v0.14.1"}
+  "omd"
 ]
 build: ["dune" "build" "-p" name "-j" jobs]
 dev-repo: "git+https://github.com/joelburget/lvca.git"
