--- a/lvca.opam
+++ b/lvca.opam
@@ -24,6 +24,7 @@ depends: [
   "ppx_optcomp" {>= "v0.14.1"}
   "omd"
   "crowbar"
+  "note"
 ]
 build: ["dune" "build" "-p" name "-j" jobs]
 dev-repo: "git+https://github.com/joelburget/lvca.git"
