Add provenance package.

--- a/ppx_lvca/dune
+++ b/ppx_lvca/dune
@@ -4,4 +4,4 @@
  (kind ppx_rewriter)
  (preprocess
   (pps ppxlib.metaquot))
- (libraries base lvca_syntax ppxlib))
+ (libraries base lvca_syntax lvca_provenance ppxlib))
