--- a/bidirectional/dune
+++ b/bidirectional/dune
@@ -2,6 +2,6 @@
  (name lvca_bidirectional)
  (public_name lvca.bidirectional)
  (inline_tests)
- (libraries lvca_syntax)
+ (libraries lvca_syntax lvca_provenance)
  (preprocess
   (pps ppx_jane)))
