--- a/core/dune
+++ b/core/dune
@@ -3,5 +3,6 @@
  (public_name lvca.core)
  (inline_tests)
  (libraries lvca_parsing lvca_syntax)
+ (wrapped false)
  (preprocess
   (pps ppx_jane)))
