Break core ppx into its own package.

--- a/languages/dune
+++ b/languages/dune
@@ -2,7 +2,14 @@
  (name lvca_languages)
  (public_name lvca.languages)
  (inline_tests)
- (libraries constructive_real fmt lvca_bidirectional lvca_core lvca_parsing
-   lvca_syntax lvca_util omd)
+ (libraries
+  constructive_real
+  fmt
+  lvca_bidirectional
+  lvca_core
+  lvca_parsing
+  lvca_syntax
+  lvca_util
+  omd)
  (preprocess
-  (pps ppx_jane ppx_lvca)))
+  (pps ppx_jane ppx_lvca ppx_lvca_core)))
