make lint / dune fmt

--- a/ppx_lvca/dune
+++ b/ppx_lvca/dune
@@ -5,10 +5,5 @@
  (kind ppx_rewriter)
  (preprocess
   (pps ppx_jane ppxlib.metaquot))
- (libraries
-  base
-  lvca_syntax
-  lvca_syntax_quoter
-  lvca_parsing
-  lvca_provenance
-  ppxlib))
+ (libraries base lvca_syntax lvca_syntax_quoter lvca_parsing lvca_provenance
+   ppxlib))
