--- a/ppx_lvca_core/dune
+++ b/ppx_lvca_core/dune
@@ -5,12 +5,5 @@
  (kind ppx_rewriter)
  (preprocess
   (pps ppx_jane ppxlib.metaquot))
- (libraries
-  base
-  lvca_core
-  lvca_syntax
-  lvca_syntax_quoter
-  lvca_parsing
-  lvca_provenance
-  ppxlib
-  ppx_lvca))
+ (libraries base lvca_core lvca_syntax lvca_syntax_quoter lvca_parsing
+   lvca_provenance ppxlib ppx_lvca))
