--- a/pages/dune
+++ b/pages/dune
@@ -3,17 +3,7 @@
  (modes js)
  (link_flags
   (:standard -no-check-prims))
- (libraries
-  angstrom
-  base
-  brr
-  brr.note
-  digestif.ocaml
-  lvca_bidirectional
-  lvca_languages
-  lvca_parsing
-  lvca_provenance
-  lvca_syntax
-  note)
+ (libraries angstrom base brr brr.note digestif.ocaml lvca_bidirectional
+   lvca_languages lvca_parsing lvca_provenance lvca_syntax note)
  (preprocess
   (pps ppx_blob ppx_jane ppx_lvca)))
